fix: notification bar gap fixed

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ header img {
     align-items: center;
     padding: 0.8em;
     justify-content: space-between;
+    gap: 0.5em;
 }
 
 .notification_bar i {
